# mlops-template

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  NOTICE  README.md
.claude/agents/business/: executive-ghostwriter.md
.claude/agents/infrastructure/: supabase-architect.md
.claude/agents/mobile/: apple-developer.md  ios-development-standards.md  ios-review-agent.md
.github/: dependabot.yml
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/aipacken/: __init__.py  main.py  observability.py  storage.py
apps/api/aipacken/api/: authz.py  pagination.py  ratelimit.py
apps/api/aipacken/api/routers/: artifacts.py  auth.py  catalog.py  datasets.py  deployments.py  experiments.py  health.py  internal.py  models.py  packages.py  predictions.py  runs.py  sse.py
apps/api/aipacken/api/schemas/: __init__.py  auth.py  catalog.py  datasets.py  deployments.py  experiments.py  models.py  predictions.py  runs.py
apps/api/aipacken/config/: settings.py
apps/api/aipacken/db/: __init__.py  base.py  models.py  session.py
apps/api/aipacken/docker_client/: builder_app.py  builder_client.py  traefik_sync.py
apps/api/aipacken/jobs/: queue.py  queues.py  worker.py
apps/api/aipacken/jobs/tasks/: __init__.py  analyze_run.py  build_package.py  cleanup.py  deploy_model.py  profile_dataset.py  teardown_deployment.py  train_run.py
apps/api/aipacken/ml/: analyze.py
apps/api/aipacken/scripts/: export_openapi.py  run_migrations.py  seed_admin.py  seed_catalog.py  seed_demo.py
apps/api/aipacken/security/: __init__.py  signing.py
apps/api/aipacken/services/: auth.py  minio_client.py  mlflow_client.py  redis_client.py
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py  0002_model_packages.py  0003_fk_indexes.py  0004_run_task_hpo_roles.py  0005_model_version_stage_lifecycle.py  0006_db_hygiene.py  0007_mlflow_cutover_a.py  0008_mlflow_cutover_b.py
apps/api/tests/: conftest.py  test_auth.py  test_authz_cross_user.py  test_datasets.py  test_health.py  test_mlflow_client_filters.py  test_runs.py  test_signing.py
apps/web/: .dockerignore  Dockerfile  eslint.config.js  index.html  nginx.conf  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/src/: main.tsx  router.tsx
apps/web/src/components/atoms/: BadgeGlow.tsx  Button.test.tsx  Button.tsx  Eyebrow.tsx  FeatureTypePill.tsx  IconTile.tsx  MetricDelta.tsx  RunStatusBadge.test.tsx  RunStatusBadge.tsx
apps/web/src/components/layout/: AppShell.tsx  RequireAuth.tsx  Sidebar.tsx
apps/web/src/components/molecules/: CodeSnippetTabs.tsx  EditableHeading.tsx  FileDropzone.tsx  GlassCard.tsx  LineageChip.tsx  MetricCard.tsx  Modal.tsx  StepIndicator.tsx  ThreeWaySplitSlider.tsx
apps/web/src/components/organisms/: BiasGroupTable.tsx  DeploymentEndpointCard.tsx  FeatureProfilePanel.tsx  RunMetricsChart.tsx  SHAPGlobalBars.tsx  SchemaDrivenForm.tsx  TrainingLogStream.tsx
apps/web/src/i18n/: de.json  en.json  index.ts
apps/web/src/lib/: cn.ts  format.ts
apps/web/src/lib/api/: client.ts  queryKeys.ts
apps/web/src/lib/codegen/: snippets.ts
apps/web/src/lib/hooks/: useAuth.ts  useEventSource.ts
apps/web/src/lib/schema/: jsonSchemaToZod.ts
apps/web/src/pages/Dashboard/: Dashboard.test.tsx  index.tsx
apps/web/src/pages/datasets/: DatasetDetail.tsx  DatasetsList.tsx
apps/web/src/pages/deployments/: DeploymentsList.tsx
apps/web/src/pages/deployments/DeploymentDetail/: LogsTab.tsx  OverviewTab.tsx  PredictionsTab.tsx  TestTab.tsx  index.tsx
apps/web/src/pages/experiments/: ExperimentDetail.tsx  ExperimentsList.tsx
apps/web/src/pages/experiments/NewRunWizard/: StepFeatures.tsx  StepHyperparameters.tsx  StepModel.tsx  StepProblemType.tsx  StepProfile.tsx  StepTargetSplit.tsx  StepUpload.tsx  index.tsx
apps/web/src/pages/experiments/RunDetail/: index.tsx
apps/web/src/pages/login/: Login.tsx
apps/web/src/pages/models/: ModelDetail.tsx  ModelsList.tsx
apps/web/src/pages/settings/: Settings.tsx
apps/web/src/state/: uiStore.ts  wizardStore.ts
apps/web/src/styles/: colors_and_type.css  components.css
infra/compose/: docker-compose.dev.yml  docker-compose.yml
infra/mlflow/: Dockerfile
infra/postgres/: init-mlflow-db.sh  init.sql
infra/traefik/dynamic/: models.yml  routes.yml
scripts/: backup.sh  bootstrap.sh  build_bases.sh  restore.sh
serving_base/: Dockerfile  Dockerfile.autogluon  pyproject.toml
serving_base/platform_serving/: __init__.py  batch.py  loader.py  logging_middleware.py  main.py  schema.py  signing.py
trainer_base/: Dockerfile  Dockerfile.autogluon  pyproject.toml
trainer_base/platform_trainer/: __init__.py  __main__.py  analyze.py  feature_engineering.py  hpo.py  io.py  mlflow_sink.py  signing.py  transforms.py
trainer_base/platform_trainer/adapters/: __init__.py  autogluon.py  boosted_trees.py  clustering.py  forecasting.py  recommender.py  sklearn_like.py
trainer_base/tests/: test_clustering_no_leakage.py
