[project]
name = "platform-serving"
version = "0.1.0"
description = "Generic FastAPI serving wrapper for the AIpacken AI Platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.4",
  "uvicorn[standard]==0.32.0",
  "pydantic==2.9.2",
  "pandas==2.2.3",
  "numpy==1.26.4",
  "scikit-learn==1.5.2",
  "mlflow-skinny==2.17.0",
  "boto3==1.35.0",
  "shap==0.46.0",
  "structlog==24.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["platform_serving"]
