[project]
name = "platform-serving"
version = "0.1.0"
description = "Generic FastAPI serving wrapper for the AIpacken AI Platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.4",
  "uvicorn[standard]==0.32.0",
  "pydantic==2.9.2",
  "pandas==2.2.3",
  "numpy==1.26.4",
  "scikit-learn==1.5.2",
  "joblib==1.4.2",
  "structlog==24.4.0",
  "httpx==0.27.2",
  "python-multipart==0.0.17",
  # Same framework set as the trainer so joblib.load can unpickle any
  # built-in model we ship (sklearn + xgboost + lightgbm). AutoGluon
  # needs its own image because the install is heavy; that's tracked
  # separately.
  "xgboost==2.1.1",
  "lightgbm==4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["platform_serving"]
