[project]
name = "platform-trainer"
version = "0.1.0"
description = "Generic training-container entrypoint for the AIpacken AI Platform"
requires-python = ">=3.11"
dependencies = [
  "pandas==2.2.3",
  "pyarrow==17.0.0",
  "scikit-learn==1.5.2",
  "numpy==1.26.4",
  "boto3==1.35.0",
  "mlflow-skinny==2.17.0",
  "shap==0.46.0",
  "fairlearn==0.11.0",
  "pydantic==2.9.2",
  "joblib==1.4.2",
  "matplotlib==3.9.2",
  "xgboost==2.1.1",
  "lightgbm==4.5.0",
]

[project.optional-dependencies]
autogluon = [
  "autogluon.tabular[lightgbm,xgboost,catboost]==1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["platform_trainer"]
