[project]
name = "platform-trainer"
version = "0.1.0"
description = "Generic training-container entrypoint for the AIpacken AI Platform"
requires-python = ">=3.11"
dependencies = [
  "pandas==2.2.3",
  "pyarrow==17.0.0",
  "scikit-learn==1.5.2",
  "numpy==1.26.4",
  "shap==0.46.0",
  "fairlearn==0.11.0",
  "pydantic==2.9.2",
  "joblib==1.4.2",
  "matplotlib==3.9.2",
  "xgboost==2.1.1",
  "lightgbm==4.5.0",
  "optuna==3.6.1",
  # MLflow tracking — trainer writes every run's params/metrics/artifacts
  # to the tracking server via MLFLOW_TRACKING_URI. mlflow pulls boto3
  # transitively for artifact upload to the platform's MinIO.
  "mlflow==2.17.2",
  "boto3==1.35.79",
]

[project.optional-dependencies]
autogluon = [
  "autogluon.tabular[lightgbm,xgboost,catboost]==1.1.1",
]
# Forecasting models (sktime wraps statsmodels ARIMA / ETS).
forecasting = [
  "sktime==0.32.4",
  "statsmodels==0.14.4",
]
# Recommender engines — Surprise for explicit, implicit for implicit feedback.
recommender = [
  "scikit-surprise==1.1.4",
  "implicit==0.7.2",
  "scipy==1.13.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["platform_trainer"]
