[project]
name = "platform-api"
version = "0.1.0"
description = "AIpacken AI Platform — FastAPI backend + Arq worker + builder service"
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.115.4",
  "uvicorn[standard]==0.32.0",
  "pydantic==2.9.2",
  "pydantic-settings==2.6.1",
  "sqlalchemy==2.0.36",
  "alembic==1.13.3",
  "psycopg[binary]==3.2.3",
  "arq==0.26.1",
  "redis==5.1.1",
  "python-multipart==0.0.17",
  "itsdangerous==2.2.0",
  "structlog==24.4.0",
  "httpx==0.27.2",
  "jinja2==3.1.4",
  "docker==7.1.0",
  "pandas==2.2.3",
  "pyarrow==17.0.0",
  "ydata-profiling==4.11.0",
  "scikit-learn==1.5.2",
  "joblib==1.4.2",
  "watchfiles==0.24.0",
  "argon2-cffi==23.1.0",
  "bcrypt==4.2.0",
  "aiosqlite==0.20.0",
  "httpx-sse==0.4.0",
  "uuid6==2024.7.10",
  "email-validator==2.2.0",
  "prometheus-fastapi-instrumentator==7.0.0",
  # MLflow client — the api reads runs/metrics/artifacts/experiments
  # from the Tracking Server when MLFLOW_BACKEND=true. boto3 pulls in
  # via mlflow for artifact listing on the S3-compatible MinIO backend.
  "mlflow==2.17.2",
  "boto3==1.35.79",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "httpx==0.27.2",
  "ruff==0.7.2",
  "mypy==1.13.0",
  "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aipacken"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "S", "C4", "PL", "RUF"]
# S101:    asserts are required in tests and used in Pydantic validation.
# PLR0913: FastAPI handlers legitimately take many Depends() args.
# B008:    FastAPI's Depends/File/Form idiom calls functions in argument defaults.
# S110/S113/S103/S105/S108: real code smells called out in the full-platform
#   code review (security.md "Remove / Simplify", python.md P1 "bare except").
#   Temporarily suppressed at the config level so CI can go green today;
#   tracked as Batch 7 in the roadmap (docs/review/CODE_REVIEW_REPORT.md).
#   Do NOT add new instances of these — each violation should be fixed
#   inline, not appended to the debt.
ignore = [
  "S101",    # assert usage — required in tests + Pydantic guards
  "PLR0913", # too-many-arguments — FastAPI handlers use many Depends()
  "B008",    # function-call-in-default — FastAPI Depends/File/Form idiom
  "PLC0415", # import-outside-top-level — deliberate lazy imports break cycles
  "PLR2004", # magic-value-comparison — HTTP status codes are fine inline
  "PLR0911", # too-many-return-statements — FastAPI early-return style
  "PLR0912", # too-many-branches — matches task-family dispatch
  "PLR0915", # too-many-statements — matches pipeline orchestration
  "PLW0603", # global-statement — tracked in python.md P1 (redis_client._pool)
  "PLW2901", # for-loop-var-overwritten — idiomatic where used
  "RUF012",  # mutable-class-attribute — SQLAlchemy ORM pattern
  # S110/S113/S103/S105/S108 used to be suppressed here as tracked debt.
  # Batch 18 went through every site: swallowed exceptions are narrowed
  # + structured-logged, long-poll httpx calls are documented with inline
  # noqa explaining the Arq timeout is authoritative, chmod 0o777 carries
  # an inline noqa referring back to the shared-GID follow-up in
  # storage.ensure_base_dirs. Any new violation must be justified at its
  # call site, not added to this list.
]

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use magic numbers in assertions, plaintext passwords
# in fixture setup, and deferred imports after env-var monkey-patching.
"tests/**" = ["S105", "S106", "PLR2004", "E402"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Pin fixture loop scope to function so each async test gets a fresh loop.
# Removes the PytestDeprecationWarning and prevents "Event loop is closed"
# errors when SQLAlchemy engines carry connections across fixture tear-downs.
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["aipacken"]
# Migrations are Alembic-generated DDL; scripts are one-shot entrypoints
# that don't belong in unit-test coverage. Tracking them would inflate the
# ratchet without adding signal.
omit = [
  "aipacken/migrations/*",
  "aipacken/scripts/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
